force-app/main/default/objects/User/fields/curGoal_del__c.field-meta.xml
<CustomField>
    <fullName>curGoal_del__c</fullName>
    <description>Monthly Goal of the Sales Agent</description>
    <label>Goal</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>