force-app/main/default/objects/User/fields/GTM_Motion_User__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_User__c</fullName>
    <label>GTM Motion User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Subscription New Business</fullName>
            </value>
            <value>
                <fullName>Subscription Retention</fullName>
            </value>
            <value>
                <fullName>Enterprise Retention</fullName>
            </value>
            <value>
                <fullName>Agency Sales</fullName>
            </value>
            <value>
                <fullName>Subscription Prospecting</fullName>
            </value>
            <value>
                <fullName>Enterprise Expansion</fullName>
                <isActive>false</isActive>
                <label>Enterprise Expansion</label>
            </value>
            <value>
                <fullName>Subscription Expansion</fullName>
                <isActive>false</isActive>
                <label>Subscription Expansion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>