force-app/main/default/objects/User/fields/Hiring_Date__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Date__c</fullName>
    <description>Joining Date</description>
    <label>Hiring Date</label>
    <type>Date</type>
</CustomField>