force-app/main/default/objects/User/fields/Manager_ID_reports__c.field-meta.xml
<CustomField>
    <fullName>Manager_ID_reports__c</fullName>
    <formula>Manager.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager ID (reports)</label>
    <type>Text</type>
</CustomField>