force-app/main/default/objects/User/fields/Manager_reports__c.field-meta.xml
<CustomField>
    <fullName>Manager_reports__c</fullName>
    <formula>Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager (reports)</label>
    <type>Text</type>
</CustomField>