force-app/main/default/objects/User/fields/Opportunity_Limit__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Limit__c</fullName>
    <label>Opportunity Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>