force-app/main/default/objects/User/fields/Prospecting_PreSales_Target_Month_2__c.field-meta.xml
<CustomField>
    <fullName>Prospecting_PreSales_Target_Month_2__c</fullName>
    <label>Prospecting Target Month 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>