force-app/main/default/objects/User/fields/Prospecting_PreSalesTarget_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Prospecting_PreSalesTarget_Current_Month__c</fullName>
    <description>Displays the target of the current month by.</description>
    <formula>CASE( MOD( MONTH( TODAY() ) ,3) ,
1, Prospecting_PreSales_Target_Month_1__c ,
2, Prospecting_PreSales_Target_Month_2__c ,
Prospecting_PreSales_Target_Month_3__c )</formula>
    <label>Prospecting Target Current Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>