force-app/main/default/objects/User/fields/Prospecting_Target_Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Prospecting_Target_Current_Quarter__c</fullName>
    <description>Tracking quarterly Prospecting Goals</description>
    <inlineHelpText>Tracking quarterly Prospecting Goals</inlineHelpText>
    <label>Demo Target Current Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>