force-app/main/default/objects/User/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <formula>UserRole.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role ID</label>
    <type>Text</type>
</CustomField>