force-app/main/default/objects/User/fields/Service_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Country__c</fullName>
    <label>Service Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>