force-app/main/default/objects/User/fields/sf_devops__GitHub_Primary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__GitHub_Primary_Email_Address__c</fullName>
    <description>The primary email address used to configure git when we are connecting to a GitHub Repository</description>
    <label>GitHub Primary Email Address</label>
    <type>Email</type>
</CustomField>