force-app/main/default/objects/User/fields/Skip_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation Rule</label>
    <type>Checkbox</type>
</CustomField>