force-app/main/default/objects/User/fields/txtDurchwahl__c.field-meta.xml
<CustomField>
    <fullName>txtDurchwahl__c</fullName>
    <label>Durchwahl</label>
    <length>2</length>
    <type>Text</type>
</CustomField>