force-app/main/default/objects/User/fields/urlYouCanBookMeLink__c.field-meta.xml
<CustomField>
    <fullName>urlYouCanBookMeLink__c</fullName>
    <label>YouCanBookMe Link</label>
    <type>Url</type>
</CustomField>