force-app/main/default/objects/User/fields/User_ID_18__c.field-meta.xml
<CustomField>
    <fullName>User_ID_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>User ID (18)</label>
    <type>Text</type>
</CustomField>