force-app/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.PHONE</columns>
    <columns>User__c</columns>
    <columns>CORE.USERS.INFO_EMAILS_ADMIN</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users</label>
    <language>en_US</language>
</ListView>