force-app/main/default/objects/User/listViews/Users_w_o_Verified_Email.listView-meta.xml
<ListView>
    <fullName>Users_w_o_Verified_Email</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>HAS_USER_VERIFIED_EMAIL</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Users w/o Verified Email</label>
    <language>en_US</language>
</ListView>